--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
               </h5>
               <div class="card-header"><h2> Airport <%= fl.airport %></h2></div>
               
-              <Your class="card-text" class="">Your departure date is <%= fl.departs %></p>
+              <p class="card-text" class= <%=  %> >Your departure date is <%= fl.departs %></p>
             </div>
             <div class="card-footer">
               <a href="/single-flight/edit/<%= fl.id %>" class="btn btn-primary"> Edit Details</a>
