--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,8 +19,9 @@
                 <small class="text-muted"><%= fl.flightNo %></small>
               </h5>
               <div class="card-header"><h2> Airport <%= fl.airport %></h2></div>
-              
-              <p class="card-text" class= <%=  %> >Your departure date is <%= fl.departs %></p>
+              <div class=<%= fl.departs.getFullYear() !== new Date().getFullYear() ? 'dateError' : '' %> >
+                <p class="card-text">Your departure date is <%= fl.departs %></p>
+              </div>
             </div>
             <div class="card-footer">
               <a href="/single-flight/edit/<%= fl.id %>" class="btn btn-primary"> Edit Details</a>
