--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,8 +24,11 @@
               </div>
             </div>
             <div class="card-footer">
-              <a href="/single-flight/edit/<%= fl.id %>" class="btn btn-primary"> Edit Details</a>
+              <a href="/single-flight/edit/<%= fl.id %>" class="btn btn-primary"> Edit</a>
+              <input type="hidden" name="id" value=<%= fl.id %> >
+              <button class="btn btn-danger" type="button" onclick="delectFlight(this)">Delete</button>
             </div>
+        
           </div>
         <% } %> 
       </div>
