--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,9 +24,8 @@
               </div>
             </div>
             <div class="card-footer">
-              <a href="/single-flight/edit/<%= fl.id %>" class="btn btn-primary"> Edit</a>
-              <input type="hidden" name="id" value=<%= fl.id %> >
-              <button class="btn btn-danger" type="button" onclick="delectFlight(this)">Delete</button>
+              
+              <a href="/single-flight/<%= fl.id %>" class="btn btn-primary"> view more</a>
             </div>
         
           </div>
