--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,3 +49,9 @@ form button {
 .dateError{
   color: salmon
 }
+
+section{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
