--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
             </div>
             <div class="card-footer">
               
-              <a href="/single-flight/<%= fl.id %>" class="btn btn-primary"> view more</a>
+              <a href="/single-flight/<%= fl.id %>" class="btn btn-primary"> details</a>
             </div>
         
           </div>
